fix(scss): edit default container width (too large) to 1400px
[skip ci]

--- a/@ecomplus/storefront-twbs/scss/_variables.scss
+++ b/@ecomplus/storefront-twbs/scss/_variables.scss
@@ -16,7 +16,7 @@ $brand-colors: (
 $enable-responsive-font-sizes: true !default;
 
 // Minor hack to set container "almost fluid"
-$container-max-widths: (xl: 1600px) !default;
+$container-max-widths: (xl: 1400px) !default;
 
 // Additional defaults
 $line-height-sm: 1.2 !default;
